# Remote-Forensic-Imager

./: .gitignore  FX_install.sh  README.md  RFI_install.sh  forensic_qt6.ui  fx-acquire  fx-verify  main_qt6.py  pyproject.toml  requirements.txt  rfi_verify.py  test_lz4.py
.github/workflows/: python-ci.yml
codes/: acquisition.py  analysis.py  engine.py  gui.py  report_engine.py  threads.py
fx/: __init__.py
fx/audit/: logger.py  signing.py  syslog_handler.py  verify.py
fx/cli/: acquire.py  interactive.py  verify.py
fx/core/: hashing.py  policy.py  session.py  validation.py
fx/core/acquisition/: aff4.py  bad_sector_map.py  base.py  dead.py  ewf.py  lz4_writer.py  raw.py  split_writer.py  verify.py
fx/report/: dashboard.py  report_engine.py
fx/triage/: __init__.py  memory.py  network.py  orchestrator.py  processes.py
fx/ui/: gui.py  workers.py
fx/ui/resources/: forensic_qt6.ui
rfi/audit/: logger.py  signing.py
rfi/cli/: acquire.py
rfi/ui/: gui.py  workers.py
rfi/ui/resources/: forensic_qt6.ui
tests/: test_acquisition.py  test_cli.py  test_core.py  test_dashboard.py  test_edge_cases.py  test_gui.py
