[project]
name = "forenxtract"
version = "3.2.0"
description = "ForenXtract (FX) — case-first remote forensic acquisition tool with structured audit logging and report generation"
authors = [{ name = "Futhark1393" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyQt6>=6.6",
    "qt-material>=2.14",
    "paramiko>=3.0",
    "fpdf2>=2.7.0",
    "cryptography>=42.0",
    "lz4>=4.0.0",
]

[project.optional-dependencies]
aff4 = ["pyaff4"]

[project.scripts]
fx = "fx.ui.gui:main"
fx-acquire = "fx.cli.acquire:main"
fx-verify = "fx.cli.verify:main"

[tool.setuptools.packages.find]
where = ["."]
