[project]
name = "forenxtract"
version = "3.4.0"
description = "ForenXtract (FX) — case-first forensic acquisition tool (live & dead) with structured audit logging and report generation"
authors = [{ name = "Kemal Sebzeci" }]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "PyQt6>=6.6",
    "qt-material>=2.14",
    "paramiko>=3.0",
    "fpdf2>=2.7.0",
    "cryptography>=42.0",
    "lz4>=4.0.0",
]

[project.optional-dependencies]
aff4 = ["pyaff4"]

[project.scripts]
fx = "fx.ui.gui:main"
fx-acquire = "fx.cli.acquire:main"
fx-verify = "fx.cli.verify:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"fx.ui" = ["resources/*.ui"]
